# semantic-commit

./: CONTRIBUTING.md  Cargo.toml  README.md  SEMANTIC_COMMITS.md
.github/: dependabot.yml
.github/workflows/: cargo-publish.yml  create-homebrew-pr.yml  rust-clippy.yml  rust-tests.yml  semantic-pr.yml  semantic-release.yml
i18n/de/: semantic_commit.ftl
scripts/: cargo-publish.sh
src/: main.rs
