[package]
name = "semantic-commit"
version = "0.1.0"
edition = "2024"
description = "Semantic commit tool"
license = "MIT"
license-file = "LICENSE.md"
documentation = "https://raw.githubusercontent.com/ckissmann/semantic-commit/refs/heads/master/README.md"
homepage = "https://github.com/ckissmann/semantic-commit"
repository = "https://github.com/ckissmann/semantic-commit"

[dependencies]
dialoguer = "0.12.0"
i18n-embed = { version = "0.15", features = ["fluent-system",  "gettext-system", "autoreload", "desktop-requester"] }
i18n-embed-fl = "0.9"      # fl!() macro mit compile-time checks
rust-embed = "8"
unic-langid = "0.9"
once_cell = "1"

[[bin]]
name = "semantic-commit"
path = "src/main.rs"